--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ description: A Blog that Shows Ivan's Portofolio
 # User settings
 username: Ivan Muhammad Siegfried
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+user_title: Data Scientist And Machine Learning Engineer
+email: ivanmuhsiegfried@gmail.com
+twitter_username: ivanmsiegfried
+github_username:  ivanmsiegfried
+gplus_username:  ivanmsiegfried
 
 # Google-analytics
 google-analytics:
