--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A Blog that Shows Ivan's Portofolio
 
 # User settings
 username: Ivan M. Siegfried
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: Coba
 user_title: Data Scientist And Machine Learning Engineer
 email: ivanmuhsiegfried@gmail.com
 twitter_username: ivanmsiegfried
