--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A Blog that Shows Ivan's Portofolio
 
 # User settings
 username: Ivan M. Siegfried
-user_description: Hi! My name is Ivan Muhammad Siegfried. I graduated my master degree from Institut Teknologi Bandung with a Master in Physics in 2019 and took my Bachelor in Physics from Padjadjaran University in 2016. I have strong interest in Computational Physics especially on Density Functional Theory, Computational Fluid Dynamics, and Heat Transfer. Now, I have strong interest in Data Science, Machine Learning, Computer Vision. I am currently working in private sector focusing on developing applied technologies that can improve human life.
+user_description: Hi! My name is Ivan Muhammad Siegfried. I took my Master Degree in Physics and graduated from Institut Teknologi Bandung in 2019 and took my Bachelor in Physics from Padjadjaran University in 2016. I have strong interest in Computational Physics especially on Density Functional Theory, Computational Fluid Dynamics, Heat Transfer, and Instrumentation as well. Now, I focus on Data Science, Machine Learning, Computer Vision. I am currently working in private sector focusing on developing applied technologies that can improve human life.
 user_title: Data Scientist And Machine Learning Engineer
 email: ivanmuhsiegfried@gmail.com
 twitter_username: ivanmsiegfried
